--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.2",
     "mongodb": "^6.0.0",
     "mongoose": "^7.4.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
