--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,5 @@
 VITE_API_URL=http://localhost:5005/api
 VITE_APP_NAME=CanineClick Connect
+CLOUDINARY_NAME=dd0h7tx1n
+CLOUDINARY_KEY=411178198132254
+CLOUDINARY_SECRET=uHOvNJ7IvQ1om308YDr2ACHhjes
