--- a/client/.env
+++ b/client/.env
@@ -3,3 +3,4 @@ VITE_APP_NAME=CanineClick Connect
 CLOUDINARY_NAME=dd0h7tx1n
 CLOUDINARY_KEY=411178198132254
 CLOUDINARY_SECRET=uHOvNJ7IvQ1om308YDr2ACHhjes
+REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyDEfioKfYGi6udaByyFEojQ4p3fvjcP00Q
